--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
   <link rel="stylesheet" type="text/css" href="style.css">
 
-  <script src= "jsFile.js"></script>
+  <script src= "script.js"></script>
 
 </head>
 <body>
