redirection of thank you page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <form action="https://formsubmit.co/choresassorted@gmail.com" method="POST">
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="false">
+      <input type="hidden" name="_next" value="https://techupkeep.github.io/chores/thankyou.html">
 
       <label for="clothesWash">Clothes Wash and Dry</label>
       <select name="clothesWash" id="clothesWash">
