rearrange some chores

--- a/index.html
+++ b/index.html
@@ -79,15 +79,14 @@
       <label for="typing">Typing from R10 per page</label>
       <input type="number" min="0" max="1000" id="typing" name="typing"> page/s<br/>
 
-      <label for="websiteHosting">Website Hosting R20 per month</label>
-      <input type="number" min="0" max="1000" id="websiteHosting" name="websiteHosting"> website/s<br/>
-
       <label for="codingLesson">Coding Lesson from R30 per hour</label>
       <input type="number" min="0" max="1000" id="codingLesson" name="codingLesson"> hour/s<br/>
 
       <label for="websiteDesign">Website Design R100 per page</label>
-      <input type="number" min="0" max="1000" id="websiteDesign" name="websiteDesign"> hour/s<br/>
+      <input type="number" min="0" max="1000" id="websiteDesign" name="websiteDesign"> page/s<br/>
 
+      <label for="websiteHosting">Website Hosting R20 per month</label>
+      <input type="number" min="0" max="1000" id="websiteHosting" name="websiteHosting"> website/s<br/>
 
       <label for="anyOtherChore">Any other Chore/s</label>
       <input type="textarea" id="anyOtherChore" name="anyOtherChore"><br/>
