updated wash and dry options

--- a/index.html
+++ b/index.html
@@ -39,17 +39,15 @@
       <label for="clothesWash">Clothes Wash and Dry</label>
       <select name="clothesWash" id="clothesWash">
         <option value="select">Select</option>
-        <option value="Clothes Wash Small 10">Small Basket - R10</option>
-        <option value="Clothes Wash Medium 20">Medium Basket - R20</option>
-        <option value="Clothes Wash Large 30">Large Basket - R30</option>
+        <option value="Clothes Wash Small 20">Small Basket - R20</option>
+        <option value="Clothes Wash Big 40">Big Basket - R40</option>
       </select>
       <br/>
       <label for="clothesIron">Clothes Iron</label>
         <select name="clothesIron" id="clothesIron">
           <option value="select">Select</option>
-          <option value="Clothes Iron Small 10">Small Basket - R10</option>
-          <option value="Clothes Iron Medium 20">Medium Basket - R20</option>
-          <option value="Clothes Iron Large 30">Large Basket - R30</option>
+          <option value="Clothes Iron Small 20">Small Basket - R20</option>
+          <option value="Clothes Iron Big 40">Medium Basket - R40</option>
         </select>
       <br/>
 
