--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       <br/>
 
       <label for="takkieWash">Takkie Wash and Dry R5 a pair</label>
-      <input type="number" min="0" max="1000" id="takkieWash" name="takkieWash"> pair/s<br/>
+      <input type="number" min="0" max="1000" id="takkieWash" name="takkieWash" placeholder="enter pairs" ><br/>
 
       <label for="roomClean">Room Clean R1 per sqm</label>
-      <input type="number" min="0" max="1000" id="roomClean" name="roomClean"> sqm<br/>
+      <input type="number" min="0" max="1000" id="roomClean" name="roomClean" placeholder="enter sqm" ><br/>
 
       <label for="dishesWash">Dishes Wash and Dry</label>
         <select name="dishesWash" id="dishesWash">
@@ -67,24 +67,24 @@
       <br/>
 
       <label for="unplaitHair">Unplait Hair R10 per hour</label>
-      <input type="number" min="0" max="1000" id="unplaitHair" name="unplaitHair"> hrs<br/>
+      <input type="number" min="0" max="1000" id="unplaitHair" name="unplaitHair" placeholder="enter hours" ><br/>
 
       <label for="chefHire">Chef Hire from R10 per hour</label>
-      <input type="number" min="0" max="1000" id="chefHire" name="chefHire"> hour/s<br/>
+      <input type="number" min="0" max="1000" id="chefHire" name="chefHire" placeholder="enter hours" ><br/>
 
       <hr/>
 
       <label for="typing">Typing from R10 per page</label>
-      <input type="number" min="0" max="1000" id="typing" name="typing"> page/s<br/>
+      <input type="number" min="0" max="1000" id="typing" name="typing" placeholder="enter pages" ><br/>
 
       <label for="codingLesson">Coding Lesson from R30 per hour</label>
-      <input type="number" min="0" max="1000" id="codingLesson" name="codingLesson"> hour/s<br/>
+      <input type="number" min="0" max="1000" id="codingLesson" name="codingLesson" placeholder="enter hours" ><br/>
 
       <label for="websiteDesign">Website Design R100 per page</label>
-      <input type="number" min="0" max="1000" id="websiteDesign" name="websiteDesign"> page/s<br/>
+      <input type="number" min="0" max="1000" id="websiteDesign" name="websiteDesign" placeholder="how many pages?" ><br/>
 
       <label for="websiteHosting">Website Hosting R20 per month</label>
-      <input type="number" min="0" max="1000" id="websiteHosting" name="websiteHosting"> website/s<br/>
+      <input type="number" min="0" max="1000" id="websiteHosting" name="websiteHosting" placeholder="how many websites?" ><br/>
 
       <label for="anyOtherChore">Any other Chore/s</label>
       <input type="textarea" id="anyOtherChore" name="anyOtherChore"><br/>
