--- a/index.html
+++ b/index.html
@@ -130,7 +130,12 @@
     </form>
 
   </div>
-
+<div class="text-center p-3">
+            &copy; 2022 Designed by 
+            <a href="https://techupkeep.github.io/techUpkeep/">
+                Tech Upkeep
+            </a>
+  </div>
 </body>
 </html>
 
