--- a/index.html
+++ b/index.html
@@ -37,13 +37,16 @@
       <input type="hidden" name="_next" value="https://techupkeep.github.io/chores/thankyou.html">
 
       <label for="clothesWash">Clothes Wash and Dry</label>
+            <br/>
       <select name="clothesWash" id="clothesWash">
         <option value="select">Select</option>
         <option value="Clothes Wash Small 20">Small Basket - R20</option>
         <option value="Clothes Wash Big 40">Big Basket - R40</option>
       </select>
       <br/>
+      
       <label for="clothesIron">Clothes Iron</label>
+            <br/>
         <select name="clothesIron" id="clothesIron">
           <option value="select">Select</option>
           <option value="Clothes Iron Small 20">Small Basket - R20</option>
@@ -52,12 +55,17 @@
       <br/>
 
       <label for="takkieWash">Takkie Wash and Dry R5 a pair</label>
-      <input type="number" min="0" max="1000" id="takkieWash" name="takkieWash" placeholder="enter pairs" ><br/>
+            <br/>
+      <input type="number" min="0" max="1000" id="takkieWash" name="takkieWash" placeholder="enter pairs">
+      <br/>
 
       <label for="roomClean">Room Clean R1 per sqm</label>
-      <input type="number" min="0" max="1000" id="roomClean" name="roomClean" placeholder="enter sqm" ><br/>
+            <br/>
+      <input type="number" min="0" max="1000" id="roomClean" name="roomClean" placeholder="enter sqm">
+      <br/>
 
       <label for="dishesWash">Dishes Wash and Dry</label>
+            <br/>
         <select name="dishesWash" id="dishesWash">
           <option value="select">Select</option>
           <option value="Dishes Wash Small 5">Small Load - R5</option>
@@ -67,27 +75,41 @@
       <br/>
 
       <label for="unplaitHair">Unplait Hair R10 per hour</label>
-      <input type="number" min="0" max="1000" id="unplaitHair" name="unplaitHair" placeholder="enter hours" ><br/>
+            <br/>
+      <input type="number" min="0" max="1000" id="unplaitHair" name="unplaitHair" placeholder="enter hours">
+      <br/>
 
       <label for="chefHire">Chef Hire from R10 per hour</label>
-      <input type="number" min="0" max="1000" id="chefHire" name="chefHire" placeholder="enter hours" ><br/>
+            <br/>
+      <input type="number" min="0" max="1000" id="chefHire" name="chefHire" placeholder="enter hours">
+      <br/>
 
       <hr/>
 
       <label for="typing">Typing from R10 per page</label>
-      <input type="number" min="0" max="1000" id="typing" name="typing" placeholder="enter pages" ><br/>
+            <br/>
+      <input type="number" min="0" max="1000" id="typing" name="typing" placeholder="enter pages">
+      <br/>
 
       <label for="codingLesson">Coding Lesson from R30 per hour</label>
-      <input type="number" min="0" max="1000" id="codingLesson" name="codingLesson" placeholder="enter hours" ><br/>
+            <br/>
+      <input type="number" min="0" max="1000" id="codingLesson" name="codingLesson" placeholder="enter hours">
+      <br/>
 
       <label for="websiteDesign">Website Design R100 per page</label>
-      <input type="number" min="0" max="1000" id="websiteDesign" name="websiteDesign" placeholder="how many pages?" ><br/>
+            <br/>
+      <input type="number" min="0" max="1000" id="websiteDesign" name="websiteDesign" placeholder="how many pages?">
+      <br/>
 
       <label for="websiteHosting">Website Hosting R20 per month</label>
-      <input type="number" min="0" max="1000" id="websiteHosting" name="websiteHosting" placeholder="how many websites?" ><br/>
+            <br/>
+      <input type="number" min="0" max="1000" id="websiteHosting" name="websiteHosting" placeholder="how many websites?">
+      <br/>
 
       <label for="anyOtherChore">Any other Chore/s</label>
-      <input type="textarea" id="anyOtherChore" name="anyOtherChore"><br/>
+            <br/>
+      <input type="textarea" id="anyOtherChore" name="anyOtherChore">
+      <br/>
 
 
 
