--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
 
       <label for="websiteDesign">Website Design R100 per page</label>
             <br/>
-      <input type="number" min="0" max="1000" id="websiteDesign" name="websiteDesign" placeholder="how many pages?">
+      <input type="number" min="0" max="1000" id="websiteDesign" name="websiteDesign" placeholder="enter pages?">
       <br/>
 
       <label for="websiteHosting">Website Hosting R20 per month</label>
             <br/>
-      <input type="number" min="0" max="1000" id="websiteHosting" name="websiteHosting" placeholder="how many websites?">
+      <input type="number" min="0" max="1000" id="websiteHosting" name="websiteHosting" placeholder="enter websites?">
       <br/>
 
       <label for="anyOtherChore">Any other Chore/s</label>
