--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
       <br/>
 
       <label for="websiteDesign">Website Design R100 per page</label>
-      <input type="number" min="0" max="1000" id="websiteDesign" name="websiteDesign" placeholder="enter pages?">
+      <input type="number" min="0" max="1000" id="websiteDesign" name="websiteDesign" placeholder="enter pages">
       <br/>
 
       <label for="websiteHosting">Website Hosting R20 per month</label>
-      <input type="number" min="0" max="1000" id="websiteHosting" name="websiteHosting" placeholder="enter websites?">
+      <input type="number" min="0" max="1000" id="websiteHosting" name="websiteHosting" placeholder="enter websites">
       <br/>
 
       <label for="anyOtherChore">Any other Chore/s</label>
