--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
 
       <label for="anyOtherChore">Any other Chore/s</label>
       <input type="textarea" id="anyOtherChore" name="anyOtherChore">
+      
+      <div class="sidebar">
+<input type="text" id="anyOtherChore" name="trialChore">
+</div> 
       <br/>
 
 
