--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <title>Chores</title>
 
   <meta name="description" content="This is a platform for customers to book their services online, anytime, anywhere">
-  <meta name="keywords" content="chores, wash, dry, website, hosting, typing, coding">
-  <meta name="author" content="Phatutshedzo Makushu">
+  <meta name="keywords" content="chores, wash, dry, clothes, takkie, chef, hair, dishes, website, hosting, typing, coding">
+  <meta name="author" content="Tech Upkeep">
 
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
