--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
       <br/>
 
       <label for="anyOtherChore">Any other Chore/s</label>
-      <input type="textarea" id="anyOtherChore" name="anyOtherChore">
+      <input type="textarea" id="anyOtherChore" name="anyOtherChore" placeholder="enter chore/s">
       <br/>
 
 
 
       <hr/>
       <label for="name">Name</label>
-      <input type="textarea" id="name" name="name" required><br/>
+      <input type="textarea" id="name" name="name" placeholder="enter name" required><br/>
 
       <label for="whatsappNumber">WhatsApp Number</label>
-      <input type="textarea" id="whatsappNumber" name="whatsappNumber" required><br/>
+      <input type="textarea" id="whatsappNumber" name="whatsappNumber" placeholder="enter whatsapp number" required><br/>
 
       <label for="collectOrDropOffDayAndTime">Collect Or DropOff Day and Time</label>
       <input type="datetime-local" id="collectOrDropOffDayAndTime" name="collectOrDropOffDayAndTime" required><br/>
@@ -134,7 +134,7 @@
 
       <br/>
       <label for="extraRequests">Extra Requests</label>
-      <input type="textarea" id="extraRequests" name="extraRequests"><br/>
+      <input type="textarea" id="extraRequests" name="extraRequests" placeholder="enter request"><br/>
       <br/>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
